test/tests/stages/18_structures/invalid_types/initializers/initialize_struct_member_wrong_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  struct
  identifier(s)
  {
  signed
  char
  *
  identifier(char_ptr)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  string literal("It's a string")
  }
  ;
  return
  const int(0)
  ;
  }
